# climate-risk-data-cleaning

./: Pipfile  README.md  cdc_estimation.py  cdc_estimation_functions.py  download_census_data.py  estimate_cdc_data.py  fix_differences.py  map_functions.py  map_mortality_test.ipynb  map_mortality_test.py  mortality_state_level_map.ipynb  organize_cdc_data.py  parse_2017_employment.py  parse_GDP.py  parse_all_cause_mortality.py  parse_all_cause_mortality2.py  parse_all_species_counts.py  parse_asset_val.py  parse_circulatory_mortality.py  parse_circulatory_mortality4.py  parse_county_no_id.py  parse_crop_ins.py  parse_cropland.py  parse_earnings_indus.py  parse_employment.py  parse_employment_by_industry_updated.py  parse_endangered_species.py  parse_endangered_species_counts.py  parse_flood_risk.py  parse_id_match.py  parse_id_match_resorted.py  parse_invasive_species.py  parse_pastureland.py  parse_per_capita_income.py  parse_population.py  parse_population_demographics.py  parse_population_per_square_mile.py  parse_respiratory_mortality.py  parse_respiratory_mortality2.py  parse_water_usage.py  (+8 more)
.ipynb_checkpoints/: map_mortality_test-checkpoint.ipynb
CDC Wonder Data/: All-cause mortality at county level 2016.txt  All-cause mortality at national level 2016.txt  All-cause mortality at state level 2016.txt  Circulatory mortality at county level 2016.txt  Circulatory mortality at national level 2016.txt  Circulatory mortality at state level 2016.txt  Respiratory mortality at county level 2016.txt  Respiratory mortality at national level 2016.txt  (+1 more)
Parsed data/: GDP.csv  (+30 more)
(+38 files in other folders)
