[tool.poetry]
authors = ["Cypress Frankenfeld <iamcypress@gmail.com>"]
description = ""
name = "joint-program-data-cleaning"
version = "0.1.0"

[tool.poetry.dependencies]
census = "^0.8.17"
numpy = "^1.21.2"
pandas = "^1.3.3"
python = ">=3.9,<3.11"
us = "^2.0.2"
seaborn = "^0.11.2"
altair = "^4.1.0"
vega-datasets = "^0.9.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pylint = "^2.11.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
